--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -215,6 +215,7 @@
     <string name="color_pink">Pink</string>
     <string name="color_gray">Gray</string>
     <string name="color_yellow">Yellow</string>
+    <string name="color_trans_pride">Trans Pride</string>
     <string name="horizon_kernel">Install Anykernel3</string>
     <string name="horizon_kernel_summary">Flash AnyKernel3 kernel file</string>
     <string name="root_required">Requires root privileges</string>
@@ -733,5 +734,23 @@ Important Note:\n
     <string name="signature_bypass_desc">Disable APK signature verification. Manager will only be recognized through SuperKey authentication.</string>
     <string name="gki_priority_title">GKI Priority Mode</string>
     <string name="gki_priority_desc">When enabled, GKI takes priority over LKM. The LKM will not trigger GKI yield and both will run independently.</string>
+
+    <!-- HymoFS Configuration -->
+    <string name="hymofs_title">HymoFS Configuration</string>
+    <string name="hymofs_tab_status">Status</string>
+    <string name="hymofs_tab_modules">Modules</string>
+    <string name="hymofs_tab_settings">Settings</string>
+    <string name="hymofs_tab_rules">Rules</string>
+    <string name="hymofs_tab_logs">Logs</string>
+    <string name="hymofs_storage">Storage</string>
+    <string name="hymofs_modules_count">Modules</string>
+    <string name="hymofs_system_info">System Info</string>
+    <string name="hymofs_version">Version: %s</string>
+    <string name="hymofs_status_available">HymoFS kernel is available and working</string>
+    <string name="hymofs_status_not_present">HymoFS kernel is not present</string>
+    <string name="hymofs_status_kernel_too_old">Kernel version is too old for HymoFS</string>
+    <string name="hymofs_status_module_too_old">Module version is too old for current kernel</string>
+    <string name="hymofs_builtin_mount">Built-in Mount</string>
+    <string name="hymofs_builtin_mount_desc">Use built-in hymo mount instead of external metamodule. Disable this if you want to use another metamodule.</string>
 </resources>
 
